syntax = "proto3";
package corepb.eventbus;
option go_package = "./;corepb";

import "corepb/user.proto";
import "corepb/todo.proto";
import "corepb/file.proto";

message EventbusEmpty {}

service UserEventbus {
  rpc UserChange(corepb.user.UserChangeEvent) returns (EventbusEmpty);
  rpc UserSecurity(corepb.user.UserSecurityEvent) returns (EventbusEmpty);
}

service TodoEventbus {
  rpc TodoChange(corepb.todo.TodoChangeEvent) returns (EventbusEmpty);
}

service FileEventbus {
  rpc FileUploaded(corepb.file.FileUploadEvent) returns (EventbusEmpty);
  rpc FileComplete(corepb.file.FileCompleteEvent) returns (EventbusEmpty);
}
